source/css/_common/components/post/post-reward.styl
#rewardButton {
  cursor: pointer;
  border: 0;
  outline: 0;
  border-radius: 5px;
  padding: 0;
  margin: 0;
  letter-spacing: normal;
  text-transform: none;
  text-indent: 0px;
  text-shadow: none;
}

#rewardButton span {
  display: inline-block;
  width: 80px;
  height: 35px;
  border-radius: 5px;
  color: #fff;
  font-weight: 400;
  font-style: normal;
  font-variant: normal;
  font-stretch: normal;
  font-size: 18px;
  background: #F44336;
}

#rewardButton span:hover {
  background: #F7877F;
}

#QR {
  padding-top: 20px;
}

#QR a {
  border: 0;
}

#QR img {
  width: 180px;
  max-width: 100%;
  display: inline-block;
  margin: 0.8em 2em 0 2em;
}

#QR p {
  text-align: center;
}

#QR > div:hover p {
  animation: roll 0.1s infinite linear;
}

@keyframes roll {
  from {
    transform: rotateZ(30deg);
  }
  to {
    transform: rotateZ(-30deg);
  }
}

